# ML-Zoomcamp-2025-Midterm_Project

./: Dockerfile  README.md  model_utils.py  predict.py  predict_local.py  pyproject.toml  to_do.txt  train.py
notebooks/: eda.ipynb  feature_engineering.ipynb  model_experiments.ipynb
